# openvino_tensorflow

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  BUILD_OSX.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_cn.md  WORKSPACE  build_ngtf.py  build_ov.py  build_ovtf.py  build_tf.py  configure_bazel.sh  index.html  mnist_fprop_only.py  ngraph_device.cc  ngraph_op_kernels.cc  ngraph_op_kernels_1.cc  ov_tf_fe.patch  ov_tf_fe_v2.patch  ov_tffe_temp_fix.patch  ovtf_ocm.patch  requirements.txt  test.py  test_ngtf.py  test_ovtf.py  tf2changes.patch  tf2update.patch
bazel/: BUILD  (+8 more)
examples/classification_sample/: CMakeLists.txt  main.cc  thread_safe_queue.h  utils.cc
examples/cpp/: CMakeLists.txt  hello_tf.cpp  infer_multiple_networks.cc  infer_single_network.cc  inference_engine.cc  inference_engine.h  tf_label_image_utils.cc  thread_safe_queue.h
experimental/ngraph_device/: CMakeLists.txt  README.md  axpy.py  axpy_variable_updated.py  device_test.py  ngraph_device.cc  ngraph_ops.cc  ngraph_optimization_pass.cc  ngraph_send_recv_ops.cc  version.cc  version.h
logging/: CMakeLists.txt  ngraph_log.cc  ngraph_log.h  ovtf_log.cc  ovtf_log.h  tf_graph_writer.cc  tf_graph_writer.h
ngraph_bridge/: CMakeLists.txt  api.cc  api.h  assign_clusters.cc  assign_clusters.h  backend.cc  backend.h  backend_manager.cc  backend_manager.h  cluster_manager.cc  cluster_manager.h  contexts.h  deassign_clusters.cc  deassign_clusters.h  default_opset.h  encapsulate_clusters.cc  encapsulate_clusters.h  executable.cc  executable.h  ie_backend.cc  ie_backend.h  ie_backend_engine.cc  ie_backend_engine.h  ie_basic_engine.cc  ie_basic_engine.h  ie_executable.cc  ie_executable.h  ie_tensor.cc  ie_tensor.h  ie_utils.h  ie_vadm_engine.cc  ie_vadm_engine.h  log.h  mark_for_clustering.cc  mark_for_clustering.h  ngraph_api.cc  ngraph_api.h  ngraph_assign_clusters.cc  ngraph_assign_clusters.h  ngraph_backend.cc  (+78 more)
ngraph_bridge/enable_variable_ops/: ngraph_assign_op.cc  ngraph_capture_variables.cc  ngraph_capture_variables.h  ngraph_catalog.cc  ngraph_catalog.h  ngraph_enter_in_catalog.cc  ngraph_enter_in_catalog.h  ngraph_remove_ngraphassigns.cc  ngraph_remove_ngraphassigns.h  ngraph_replace_op_utilities.cc  ngraph_replace_op_utilities.h  ngraph_replace_variable_modifiers.cc  ngraph_replace_variable_modifiers.h  ngraph_rewrite_for_tracking.cc  ngraph_rewrite_for_variable_sync.cc  ngraph_rewrite_for_variable_sync.h  ngraph_rewrite_pass.cc  ngraph_tracked_variable.cc  ngraph_var.cc  ngraph_var.h  ngraph_variable_modifiers.cc  ngraph_variable_op.cc  ngraph_variable_update_ng_tensor_op.cc  ngraph_variable_update_ng_tensor_op.h
ngraph_bridge/grappler/: ngraph_add_identityn.cc  ngraph_add_identityn.h  ngraph_optimizer.cc  ngraph_optimizer.h
ngraph_bridge/kernels/: ngraph_encapsulate_op.cc
ngraph_bridge/ops/: ngraph_encapsulate_op.cc  ngraph_ops.cc
ngraph_bridge/pass/: transpose_folding.cc  transpose_folding.h  transpose_sinking.cc  transpose_sinking.h
openvino_tensorflow/: CMakeLists.txt  api.cc  api.h  assign_clusters.cc  assign_clusters.h  backend.cc  backend.h  backend_manager.cc  backend_manager.h  cluster_manager.cc  cluster_manager.h  contexts.h  deassign_clusters.cc  deassign_clusters.h  default_opset.h  encapsulate_clusters.cc  encapsulate_clusters.h  executable.cc  executable.h  external_executable.cc  external_executable.h  ie_backend_engine.cc  ie_backend_engine.h  ie_basic_engine.cc  ie_basic_engine.h  ie_tensor.cc  ie_tensor.h  ie_utils.h  ie_vadm_engine.cc  ie_vadm_engine.h  layout_conversions.cc  layout_conversions.h  mark_for_clustering.cc  mark_for_clustering.h  ovtf_builder.cc  ovtf_builder.h  ovtf_decoder.cc  ovtf_decoder.h  ovtf_graph_iterator.h  ovtf_timer.h  (+10 more)
openvino_tensorflow/grappler/: add_identityn.cc  add_identityn.h  ovtf_optimizer.cc  ovtf_optimizer.h
openvino_tensorflow/kernels/: encapsulate_op.cc
src/: CMakeLists.txt  README.md  cmake_uninstall.in.cmake  executable.cc  executable.h  ngraph_api.cc  ngraph_api.h  ngraph_assign_clusters.cc  ngraph_assign_clusters.h  ngraph_autobroadcast.cc  ngraph_autobroadcast.h  ngraph_backend_config.cc  ngraph_backend_config.h  ngraph_backend_manager.cc  ngraph_backend_manager.h  ngraph_builder.cc  ngraph_builder.h  ngraph_capture_variables.cc  ngraph_capture_variables.h  ngraph_cluster.cc  ngraph_cluster.h  ngraph_cluster_manager.cc  ngraph_cluster_manager.h  ngraph_compiler.cc  ngraph_compiler.h  ngraph_confirm_pass.cc  ngraph_conversions.h  ngraph_deassign_clusters.cc  ngraph_deassign_clusters.h  ngraph_device.cc  ngraph_emitter.cc  ngraph_emitter.h  ngraph_encapsulate.cc  ngraph_encapsulate_clusters.cc  ngraph_encapsulate_clusters.h  ngraph_encapsulate_op.cc  ngraph_encapsulate_pass.cc  ngraph_encapsulate_v2.cc  ngraph_executable.cc  ngraph_executable.h  (+46 more)
test/: CMakeLists.txt  build_tf_cc.sh  conversions.cpp  cpp_tests_list_IECPU.txt  dummy_backend.cpp  dummy_backend.h  graph_exec.cpp  install_test.py  main.cpp  mnist_deep_simplified.py  mnist_deep_simplified_avgpool.py  mnist_softmax_ngraph.py  opexecuter.cpp  opexecuter.h  padding.cpp  plugin_test.py  resnet_unit_test.py  run-unit-tests.sh  test_array_ops.cpp  test_axpy.pbtxt  test_axpy_8bit.pbtxt  test_axpy_int8_launchop.pbtxt  test_axpy_launchop.pbtxt  test_capture_prefetch.cpp  test_capture_prefetch.pbtxt  test_capture_prefetch_1.pbtxt  test_catalog_for_prefetch.pbtxt  test_catalog_for_prefetch_1.pbtxt  test_dummy_backend.cpp  test_enter_prefetch_in_catalog.cc  test_general_graph.pbtxt  test_graph1.pbtxt  test_graph_1.pbtxt  test_image_ops.cpp  test_index_library.cpp  test_math_ops.cpp  test_momentum_op.cpp  test_ng_var_update_ng_tensor_kernel.cc  test_ngraph_data_cache.cpp  test_ngraph_exec.cpp  (+21 more)
tools/: CMakeLists.txt  Dockerfile.ubuntu18.04  Dockerfile.ubuntu18.04.devel  Dockerfile.ubuntu18.04.install  README.md  build_utils.py  docker-build.sh  docker_build_and_install_ngtf.sh  download_asset.sh  log_parser.py  run_tf2ngraph_model.py  sample_optional_params_and_shape_hints.json  test_inference_models.py  test_utils.py  tf2ngraph.py  tf_graph_analyzer.cc
(+805 files in other folders)
